@@ -1,3 +1,8 @@
+2021-06-25  Luis Machado  <luis.machado@linaro.org>
+
+	* corelow.c (core_target::core_target) Update to read target
+	description.
+
 2021-06-22  Simon Marchi  <simon.marchi@polymtl.ca>
 
 	* python/lib/gdb/__init__.py: Format.
